# cowboy

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cowboy/: agent.yaml  security.yaml
.github/workflows/: ci.yml  pages.yml  release-images.yml
crates/cowboy-cli/: Cargo.toml  build.rs
crates/cowboy-cli/src/: cli.rs  lib.rs  main.rs  style.rs
crates/cowboy-cli/src/agent/: journal_ui.rs  mod.rs  run.rs  socket_ui.rs  tools.rs  tui.rs  ui.rs
crates/cowboy-cli/src/agent/run/: handlers.rs  mod.rs  support.rs
crates/cowboy-cli/src/agent/snapshots/: cowboy__agent__tools__tests__snapshot_tool_definitions_json.snap  cowboy_cli__agent__tools__tests__snapshot_tool_definitions_json.snap
crates/cowboy-cli/src/cmd/: agents.rs  artifact.rs  attach.rs  bus.rs  crew.rs  daemon.rs  decisions.rs  doctor.rs  down.rs  fileop.rs  handoff.rs  init.rs  logs.rs  mcp.rs  memory.rs  mod.rs  models.rs  patch.rs  proc.rs  ranch.rs  review.rs  run.rs  secrets.rs  session.rs  sessions.rs  skill.rs  web.rs  worker.rs  worktree.rs
crates/cowboy-cli/src/mcp/: mod.rs  trust.rs
crates/cowboy-cli/src/net/: approvals.rs  compose.rs  control.rs  docker.rs  gateway.rs  mod.rs  runtime.rs  worktree.rs
crates/cowboy-cli/src/session/: mod.rs  replay.rs
crates/cowboy-cli/tests/: artifact.rs  cli.rs  cli_docs.rs  daemon.rs  daemon_e2e.rs  docker_e2e.rs  down.rs  gateway_approval_e2e.rs  gateway_e2e.rs  mcp_e2e.rs  memory.rs  models.rs  patch.rs  proc_e2e.rs  ranch.rs  review.rs  secrets.rs  secrets_e2e.rs  skill.rs  worker_control.rs
crates/cowboy-core/: Cargo.toml
crates/cowboy-core/src/: agents.rs  artifact.rs  config.rs  crew.rs  daemonproto.rs  decision.rs  error.rs  lib.rs  lifecycle.rs  mcp.rs  memory.rs  model.rs  model_defaults.rs  model_defaults.yaml  netproto.rs  policy.rs  ranch.rs  scope.rs  skills.rs  time.rs  tokens.rs  usersecrets.rs
crates/cowboy-core/tests/: config.rs  model_client.rs  proptest_policy.rs  proptest_roundtrip.rs  rstest_policy.rs
crates/cowboy-core/tests/snapshots/: config__snapshot_agent_template.snap  config__snapshot_models_template.snap  config__snapshot_security_template.snap
crates/cowboy-gateway/: Cargo.toml
crates/cowboy-gateway/src/: config.rs  control.rs  dns.rs  dns_policy.rs  http.rs  main.rs  nft.rs  proxy.rs  sni.rs  state.rs
crates/cowboy-gateway/tests/: proptest_parsers.rs
crates/cowboy-proto/: Cargo.toml
crates/cowboy-proto/src/: daemonproto.rs  lib.rs  netproto.rs
crates/cowboy-tui/: Cargo.toml
crates/cowboy-tui/src/: app.rs  lib.rs  markdown.rs
crates/cowboy-tui/src/app/: mod.rs  render.rs
crates/cowboy-tui/src/app/snapshots/: cowboy_tui__app__tests__snapshot_approval_modal.snap  cowboy_tui__app__tests__snapshot_choice_modal.snap  cowboy_tui__app__tests__snapshot_completion_popup.snap  cowboy_tui__app__tests__snapshot_idle_ready_for_next_message.snap  cowboy_tui__app__tests__snapshot_indicators_diff_and_processes.snap  cowboy_tui__app__tests__snapshot_markdown_and_diff_rendering.snap  cowboy_tui__app__tests__snapshot_model_form.snap  cowboy_tui__app__tests__snapshot_model_picker.snap  cowboy_tui__app__tests__snapshot_paused_menu.snap  cowboy_tui__app__tests__snapshot_plan_pane.snap  cowboy_tui__app__tests__snapshot_running_with_panes.snap  cowboy_tui__app__tests__snapshot_token_total_in_status_bar.snap  cowboy_tui__app__tests__snapshot_welcome_screen.snap
crates/cowboy-tui/src/snapshots/: cowboy_tui__app__tests__snapshot_approval_modal.snap  cowboy_tui__app__tests__snapshot_choice_modal.snap  cowboy_tui__app__tests__snapshot_completion_popup.snap  cowboy_tui__app__tests__snapshot_done.snap  cowboy_tui__app__tests__snapshot_idle_ready_for_next_message.snap  cowboy_tui__app__tests__snapshot_indicators_diff_and_processes.snap  cowboy_tui__app__tests__snapshot_model_picker.snap  cowboy_tui__app__tests__snapshot_paused_menu.snap  cowboy_tui__app__tests__snapshot_plan_pane.snap  cowboy_tui__app__tests__snapshot_running_transcript.snap  cowboy_tui__app__tests__snapshot_running_with_panes.snap  cowboy_tui__app__tests__snapshot_token_total_in_status_bar.snap  cowboy_tui__app__tests__snapshot_welcome_screen.snap
crates/cowboy-web-ui/: Cargo.toml  Trunk.toml  index.html
crates/cowboy-web-ui/src/: main.rs  model.rs
docker/: agent-entrypoint.sh  agent.Dockerfile  build.sh  gateway.Dockerfile
docs/: CONFIG.md  MVP.md  NETWORK.md  SECURITY.md  book.toml
docs/src/: SUMMARY.md  contributing.md  how-to.md  introduction.md
docs/src/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/ranch/: acceptance-gates.md  coordination.md  dashboard.md  overview.md  running.md  scope-proposals.md
docs/src/reference/: cli.md  config-files.md
docs/src/security/: model.md  network.md
docs/src/using/: agent-and-tools.md  crew.md  sessions-and-daemon.md  skills-and-subagents.md  tui.md  web.md
examples/: README.md
examples/basic/: README.md
examples/compose/: README.md  compose.yaml
examples/node/: package.json  test.js
examples/rust/.cowboy/skills/run-tests/: SKILL.md
examples/rust/src/: main.rs
notes/: crew-roster-plan.md
