[workspace]
resolver = "2"
members = [
    "crates/cowboy-cli",
    "crates/cowboy-core",
    "crates/cowboy-tui",
    "crates/cowboy-gateway",
]
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["cowboycode"]
repository = "https://github.com/cowboycode/cowboy"

[workspace.dependencies]
# internal
cowboy-core = { path = "crates/cowboy-core" }
cowboy-tui = { path = "crates/cowboy-tui" }

# cli / runtime
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
libc = "0.2"

# serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
schemars = "0.8"
ipnet = { version = "2", features = ["serde"] }

# model client
async-openai = { version = "0.41", features = ["chat-completion"] }
tiktoken-rs = "0.6"
reqwest = "0.13"  # match async-openai's reqwest so the Client type unifies

# tui
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"
ansi-to-tui = "7"
throbber-widgets-tui = "0.8"

# Note: process-group termination is done in-container (proc supervisor uses
# `setsid` + `kill -<pgid>`), and `cowboy shell` uses `docker exec -it` for the
# container PTY — so `process-wrap`/`portable-pty` (local-process crates) are
# not needed for the docker-exec model.

# gateway networking (DNS forwarder is a small UDP relay over hickory-proto)
hickory-proto = "0.25"
tls-parser = "0.12"
socket2 = { version = "0.5", features = ["all"] }
httparse = "1"

# observability / utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
jiff = "0.1"
directories = "5"
anyhow = "1"
thiserror = "1"

# dev / test
insta = { version = "1", features = ["yaml", "json"] }
rstest = "0.23"
proptest = "1"
wiremock = "0.6"
mockall = "0.13"
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tokio-test = "0.4"
pretty_assertions = "1"

[profile.release]
strip = true
lto = "thin"
