[package]
name = "cowboy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "cowboy_cli"
path = "src/lib.rs"

[[bin]]
name = "cowboy"
path = "src/main.rs"

[[bin]]
name = "cowboyd"
path = "src/bin/cowboyd.rs"

[dependencies]
cowboy-core.workspace = true
cowboy-tui.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clipboard-rs.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
schemars.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-util.workspace = true
libc.workspace = true
rpassword.workspace = true
similar.workspace = true
rmcp.workspace = true
reqwest.workspace = true  # default HTTP client for MCP streamable-HTTP transport
uuid.workspace = true     # per-session control-channel token
axum.workspace = true     # `cowboy web` remote-control server
# Typed Docker API. Default features = `http` + `pipe` (unix socket via hyperlocal
# / Windows named pipe); `ssl` (rustls) is deliberately left off — cowboy talks to
# the local daemon, not a TLS-remote one.
bollard = "0.21.0"

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
insta.workspace = true
mockall.workspace = true
tokio.workspace = true
libc.workspace = true
tokio-tungstenite.workspace = true  # WS client for `cowboy web` bridge tests
futures.workspace = true
