[package]
name = "cowboy-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cowboy-gateway"
path = "src/main.rs"

[dependencies]
cowboy-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tls-parser.workspace = true
socket2.workspace = true
httparse.workspace = true
hickory-proto.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
