[package]
name = "cowboy-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
tui-textarea.workspace = true
ansi-to-tui.workspace = true
throbber-widgets-tui.workspace = true

[dev-dependencies]
insta.workspace = true
