# The Yew/WASM remote-control frontend. It is NOT a workspace member (see the
# root Cargo.toml `exclude`): it only builds for wasm32, so `cargo build
# --workspace` on the host must skip it. Build it with `trunk build` (or
# `cargo build --target wasm32-unknown-unknown`); CI does this and the `cowboy`
# binary embeds the resulting `dist/`.
[package]
name = "cowboy-web-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Shared wire types — the same ServerMsg/ClientMsg/UiEventMsg the worker speaks,
# so the browser can never drift from the daemon.
cowboy-proto = { path = "../cowboy-proto" }
yew = { version = "0.23", features = ["csr"] }
gloo-net = { version = "0.7", default-features = false, features = ["http", "websocket", "json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Window", "Location", "HtmlTextAreaElement", "KeyboardEvent"] }
